tests/baselines/reference/emitArrowFunctionWhenUsingArguments09.errors.txt
tests/cases/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments09.ts(2,12): error TS2399: Duplicate identifier '_arguments'. Compiler uses variable declaration '_arguments' to capture 'arguments' reference.
tests/cases/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments09.ts(3,25): error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES3 and ES5. Consider using a standard function expression.


==== tests/cases/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments09.ts (2 errors) ====
    
    function f(_arguments) {
               ~~~~~~~~~~
!!! error TS2399: Duplicate identifier '_arguments'. Compiler uses variable declaration '_arguments' to capture 'arguments' reference.
        var a = () => () => arguments;
                            ~~~~~~~~~
!!! error TS2496: The 'arguments' object cannot be referenced in an arrow function in ES3 and ES5. Consider using a standard function expression.
    }